--- a/index.html
+++ b/index.html
@@ -10,99 +10,112 @@
 </head>
 
 <body>
-    <div class="menu">
+
+    <main>
+        <ol aria-label="breadcrum">
+            <li aria-current="true"> customer info</li>
+            <li aria-current="false"> shopping info</li>
+            <li aria-current="false"> payment selection</li>
+        </ol>
+
+
+        <div>
+            <form class="userinfo">
+                <h1>Customer Information</h1>
+                <div>
+
+                    <label for="name">first name</label>
+                    <input type="text" id="name">
+                </div>
+                <div>
+                    <label for="surname">surname</label>
+                    <input type="text" id="surname">
+                </div>
+
+                <div>
+                    <label for="address">address</label>
+                    <input type="text" id="address">
+                </div>
+                <div>
+                    <label for="country">country</label>
+                    <input type="text" id="country">
+                    <select id="country2">
+                        <option>select your country&hellip;</option>
+                        <option value="france">france</option>
+                        <option value="belgium">belgium</option>
+                        <option value="germany">germany</option>
+                        <option value="spain">spain</option>
+
+                    </select>
+                </div>
+                <div>
+                    <label for="city">city</label>
+                    <input type="text" id="city">
+                </div>
+                <div>
+                    <label for="postalcode">postal code</label>
+                    <input type="number" id="postalcode">
+                    <button type="button">find</button>
+                </div>
+                <label for="tel">phone</label>
+                <input type="number" id="tel">
+                <div>
+                    <span><a href="#">⬅️return to shop</a>
+                        <button type="submit">continue to shipping</button>
+                    </span>
+                </div>
+            </form>
+        </div>
+    </main>
+
+    <aside>
+        <h1>shopping cart<span aria-label="Número de productos">2</span></h1>
         <ul>
-            <li><a href="index.html">01 customer info</a></li>
-            <li><a href="shipping.html">02 shopping info</a></li>
-            <li><a href="payment.html">03 payment selection</a></li>
-        </ul>
-    </div>
-
-    <div>
-        <form class="userinfo">
-            <h1>Customer Information</h1>
-            <div>
-
-                <label for="name">first name</label>
-                <input type="text" id="name">
-            </div>
-            <div>
-                <label for="surname">surname</label>
-                <input type="text" id="surname">
-            </div>
-
-            <div>
-                <label for="address">address</label>
-                <input type="text" id="address">
-            </div>
-            <div>
-                <label for="country">country</label>
-                <input type="text" id="country">
-                <select id="country2">
-                    <option>select your country&hellip;</option>
-                    <option value="france">france</option>
-                    <option value="belgium">belgium</option>
-                    <option value="germany">germany</option>
-                    <option value="spain">spain</option>
-
-                </select>
-            </div>
-            <div>
-                <label for="city">city</label>
-                <input type="text" id="city">
-            </div>
-            <div>
-                <label for="postalcode">postal code</label>
-                <input type="number" id="postalcode">
-                <button type="button">find</button>
-            </div>
-            <label for="tel">phone</label>
-            <input type="number" id="tel">
-            <div>
-                <span><a href="#">⬅️return to shop</a>
-                <button type="submit">continue to shipping</button>
-                </span>
-            </div>
-
-
-        </form>
-
-    </div>
-    <div class="shopcart">
-        <table>
-            <tr>
-                <td>shopping cart</td>
-                <td><span>2️⃣</span></td>
-            </tr>
-            <tr>
-                <td><img src="./images/checkout/producto-2.jpg" alt=""></td>
-                <td>Typeface
+            <li>
+                <a href="#">
+                    <img src="./images/checkout/producto-2.jpg" alt=""> Typeface
                     Lightweight College Backpack
-                    ”</td>
-            </tr>
-            <tr>
-                <td><img src="./images/checkout/producto-1.jpg" alt=""></td>
-                <td>Typeface
-                    Business Casual Leather Watch Waterproof
-                    ”</td>
-            </tr>
-            <tr>have a voucher?</tr>
-            <tr>
-                <td>subtotal</td>
-                <td>169,80€</td>
-            </tr>
-            <tr>
-                <td>shipping</td>
-                <td>free</td>
-            </tr>
-            <tr>
-                <td>total</td>
-                <td>€169,80</td>
-            </tr>
-        </table>
-    </div>
-    
 
+                    <span aria-label="precio">€99,90</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="./images/checkout/producto-1.jpg" alt="">Business Casual Leather Watch Waterproof
+                    <span aria-label="precio">€69,90</span>
+                </a>
+            </li>
+        </ul>
+        <div>
+            <button type="button">have a vaucher?</button>
+            <form action="#">
+                <label for="insertCode"></label>
+                <input type="text" id="code">
+                <button type="submit">submit</button>
+            </form>
+        </div>
+        <table>
+            <caption class="sr-only">Total</caption>
+            <tr>
+                <th scope="row">subtotal
+
+                </th>
+                <td>169</td>
+            </tr>
+            <tr>
+                <th>shipping</th>
+                <td>99</td>
+            </tr>
+            <tr>
+                <th scope="row">total</th>
+                <td>169,90</td>
+            </tr>
+
+
+
+        </table>
+
+    </aside>
 </body>
 
 </html>
