--- a/shipping.html
+++ b/shipping.html
@@ -10,82 +10,96 @@
 </head>
 
 <body>
-    <div class="menu">
+    <main>
+        <ol aria-label="breadcrum">
+            <li aria-current="false"> customer info</li>
+            <li aria-current="true"> shopping info</li>
+            <li aria-current="false"> payment selection</li>
+        </ol>
+        <article>
+            <h1>Shipping Information</h1>
+            <address>
+                <p> Jamy Larson <br>
+                    Unit 2 Green Mount Retail Park <br>
+                    Halifax<br>
+                    HX1 5QN<br>
+                    Tel:0344 332 5931<br> </p>
+            </address>
+
+        </article>
+        <div>
+            <a href="#">Edit Address</a>
+            <a href="#">Add New</a>
+        </div>
+        <img src="./images/checkout/map.png" alt="">
+        <div>
+            <h1>Shipping Method</h1>
+        </div>
+        <div>
+            <form>
+                <input type="radio" aria-describedby="standart" name="delivery" id="standart">
+
+                <label for="standart">Standart Delivery Free</label>
+                <p id="desc">Estimated 14-20 Day Shipping (Duties and taxes may be due upon delivery)</p>
+
+                <input type="radio" aria-describedby="fast" name="delivery" id="fast">
+                <label for="fast">Fast Delivery €8.00</label>
+                <p>Estimated 2-5 Days Shipping (Duties and taxes may be due upon delivery)</p>
+                <div><span><a href="#">⬅️back to customer info</a>
+                        <button type="submit">Continue To Payment</button></span>
+                </div>
+
+            </form>
+        </div>
+    </main>
+    <aside>
+        <h1>shopping cart<span aria-label="Número de productos">2</span></h1>
         <ul>
-            <li><a href=index.html>01 CUSTOMER INFO</a></li>
-            <li><a href=shipping.html>02 SHOPPING INFO</a></li>
-            <li><a href=payment.html>03 PAYMENT SECTION</a></li>
-        </ul>
-    </div>
-    <article>
-        <h1>Shipping Information</h1>
-        <address>
-            <p> Jamy Larson <br>
-                Unit 2 Green Mount Retail Park <br>
-                Halifax<br>
-                HX1 5QN<br>
-                Tel:0344 332 5931<br> </p>
-        </address>
-
-    </article>
-    <div>
-        <a href="#">Edit Address</a>
-        <a href="#">Add New</a>
-    </div>
-    <img src="./images/checkout/map.png" alt="">
-    <div>
-        <h1>Shipping Method</h1>
-    </div>
-    <div>
-        <form>
-            <input type="radio" aria-describedby="standart" name="delivery" id="standart">
-
-            <label for="standart">Standart Delivery Free</label>
-            <p id="desc">Estimated 14-20 Day Shipping (Duties and taxes may be due upon delivery)</p>
-
-            <input type="radio" aria-describedby="fast" name="delivery" id="fast">
-            <label for="fast">Fast Delivery €8.00</label>
-            <p>Estimated 2-5 Days Shipping (Duties and taxes may be due upon delivery)</p>
-            <div><span><a href="#">⬅️back to customer info</a>
-                    <button type="submit">Continue To Payment</button></span>
-            </div>
-
-        </form>
-    </div>
-    <div class="shopcart">
-
-        <table>
-            <tr>
-                <td>shopping cart</td>
-                <td><span>2️⃣</span></td>
-            </tr>
-            <tr>
-                <td><img src="./images/checkout/producto-2.jpg" alt=""></td>
-                <td>Typeface
+            <li>
+                <a href="#">
+                    <img src="./images/checkout/producto-2.jpg" alt=""> Typeface
                     Lightweight College Backpack
-                    ”</td>
+
+                    <span aria-label="precio">€99,90</span>
+                </a>
+            </li>
+            <li>
+                <a href="#">
+                    <img src="./images/checkout/producto-1.jpg" alt="">Business Casual Leather Watch Waterproof
+                    <span aria-label="precio">€69,90</span>
+                </a>
+            </li>
+        </ul>
+        <div>
+            <button type="button">have a vaucher?</button>
+            <form action="#">
+                <label for="insertCode"></label>
+                <input type="text" id="code">
+                <button type="submit">submit</button>
+            </form>
+        </div>
+        <table>
+            <caption class="sr-only">Total</caption>
+            <tr>
+                <th scope="row">subtotal
+
+                </th>
+                <td>169</td>
             </tr>
             <tr>
-                <td><img src="./images/checkout/producto-1.jpg" alt=""></td>
-                <td>Typeface
-                    Business Casual Leather Watch Waterproof
-                    ”</td>
-            </tr>
-            <tr>have a voucher?</tr>
-            <tr>
-                <td>subtotal</td>
-                <td>169,80€</td>
+                <th>shipping</th>
+                <td>99</td>
             </tr>
             <tr>
-                <td>shipping</td>
-                <td>free</td>
+                <th scope="row">total</th>
+                <td>169,90</td>
             </tr>
-            <tr>
-                <td>total</td>
-                <td>€169,80</td>
-            </tr>
+
+
+
         </table>
-    </div>
+
+    </aside>
 
 
 </body>
