--- a/index.html
+++ b/index.html
@@ -2,120 +2,110 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Page Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 
+  <div class="container">
     <main>
-        <ol aria-label="breadcrum">
-            <li aria-current="true"> customer info</li>
-            <li aria-current="false"> shopping info</li>
-            <li aria-current="false"> payment selection</li>
-        </ol>
 
+      <ol class="menu" aria-label="Rastro de migas">
+        <li class="menu--true" aria-current="true">Customer info</li>
+        <li class="menu">Shipping info</li>
+        <li class="menu">Payment selection</li>
+      </ol>
+
+      <form class="check" action="">
+        <h1>Customer Information</h1>
+        <div>
+          <label class="checkout" for="firstName">First name</label>
+          <input class="check" type="text" id="firstName">
+        </div>
+        <div>
+          <label class="checkout" class="checkout" for="LastName">Last name</label>
+          <input class="check" type="text" id="LastName">
+        </div>
+        <div>
+          <label class="checkout--address" for="address">Address</label>
+          <input class="check--address" type="text" id="address">
+        </div>
+        <div>
+          <label class="checkout" for="country">Country</label>
+          <select id="country">
+            <option>Seleccionar&hellip;</option>
+            <option value="">....</option>
+          </select>
+        </div>
+        <div>
+          <label class="checkout" for="city">City</label>
+          <input class="check" type="text" id="city">
+        </div>
+        <div>
+          <label class="checkout" for="postalcode">Postal code</label>
+          <input class="check" type="number" maxlength="5" id="postalcode">
+          <button class="btn" type="button">Find</button>
+        </div>
+        <div>
+          <label class="checkout" for="phone">Phone</label>
+          <input class="check" type="tel" id="phone">
+        </div>
 
         <div>
-            <form class="userinfo">
-                <h1>Customer Information</h1>
-                <div>
-
-                    <label for="name">first name</label>
-                    <input type="text" id="name">
-                </div>
-                <div>
-                    <label for="surname">surname</label>
-                    <input type="text" id="surname">
-                </div>
-
-                <div>
-                    <label for="address">address</label>
-                    <input type="text" id="address">
-                </div>
-                <div>
-                    <label for="country">country</label>
-                    <input type="text" id="country">
-                    <select id="country2">
-                        <option>select your country&hellip;</option>
-                        <option value="france">france</option>
-                        <option value="belgium">belgium</option>
-                        <option value="germany">germany</option>
-                        <option value="spain">spain</option>
-
-                    </select>
-                </div>
-                <div>
-                    <label for="city">city</label>
-                    <input type="text" id="city">
-                </div>
-                <div>
-                    <label for="postalcode">postal code</label>
-                    <input type="number" id="postalcode">
-                    <button type="button">find</button>
-                </div>
-                <label for="tel">phone</label>
-                <input type="number" id="tel">
-                <div>
-                    <span><a href="#">⬅️return to shop</a>
-                        <button type="submit">continue to shipping</button>
-                    </span>
-                </div>
-            </form>
+          <a href="#">Return to Shop</a>
+          <button class="blue__btn" type="submit">Continue to Shipping</button>
         </div>
+      </form>
+
     </main>
 
-    <aside>
-        <h1>shopping cart<span aria-label="Número de productos">2</span></h1>
-        <ul>
-            <li>
-                <a href="#">
-                    <img src="./images/checkout/producto-2.jpg" alt=""> Typeface
-                    Lightweight College Backpack
-
-                    <span aria-label="precio">€99,90</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="./images/checkout/producto-1.jpg" alt="">Business Casual Leather Watch Waterproof
-                    <span aria-label="precio">€69,90</span>
-                </a>
-            </li>
-        </ul>
-        <div>
-            <button type="button">have a vaucher?</button>
-            <form action="#">
-                <label for="insertCode"></label>
-                <input type="text" id="code">
-                <button type="submit">submit</button>
-            </form>
-        </div>
-        <table>
-            <caption class="sr-only">Total</caption>
-            <tr>
-                <th scope="row">subtotal
-
-                </th>
-                <td>169</td>
-            </tr>
-            <tr>
-                <th>shipping</th>
-                <td>99</td>
-            </tr>
-            <tr>
-                <th scope="row">total</th>
-                <td>169,90</td>
-            </tr>
-
-
-
-        </table>
-
+    <aside class="shoppingCard">
+      <h1 class="shoppingCard__header">Shopping Cart <span aria-label="Número de productos">2</span></h1>
+      <ul class="shopList">
+        <li>
+          <a href="#">
+            <img src="..." alt="">
+            Lightweight College Backpack
+            <span aria-label="precio">€ 99.90</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="..." alt="">
+            Business Casual Leather Watch Waterproof
+            <span aria-label="precio">€ 69.90</span>
+          </a>
+        </li>
+      </ul>
+      <div class="shopValid">
+        <button class="btn--valid" class="" type="button">Have a Voucher?</button>
+        <form class="voucher" action="">
+          <label for="code">Insert vaucher code</label>
+          <input type="text" id="code">
+          <button class="voucher__btn" type="submit">Submit</button>
+        </form>
+      </div>
+      <table class="total">
+        <caption class="sr-only">Totales del carrito</caption>
+        <tr>
+          <th scope="row">Subtotal</th>
+          <td>€ 169.80</td>
+        </tr>
+        <tr>
+          <th scope="row">Shipping</th>
+          <td>free</td>
+        </tr>
+        <tr class="totalPrice">
+          <th scope="row">Total</th>
+          <td>€ 169.80</td>
+        </tr>
+      </table>
     </aside>
+  </div>
+
 </body>
 
 </html>
