--- a/payment.html
+++ b/payment.html
@@ -2,107 +2,108 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Page Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
 
+  <div class="container">
     <main>
-        <ol aria-label="breadcrum">
-            <li aria-current="true"> customer info</li>
-            <li aria-current="false"> shopping info</li>
-            <li aria-current="false"> payment selection</li>
-        </ol>
 
+      <ol class="menu" aria-label="Rastro de migas">
+        <li>Customer info</li>
+        <li>Shipping info</li>
+        <li class="menu--true" aria-current="true">Payment selection</li>
+      </ol>
+
+      <form class="paymentSelect" action="">
+        <h1 class="paymentSelect__header">Payment Selection</h1>
+        <fieldset>
+          <div class="paymentSelect--radioCredit">
+            <input type="radio" name="payment" id="creditCard">
+            <label for="creditCard" aria-describedby="descCreditCard">Credit Card</label>
+            <p id="descCreditCard">Safe money transfer using your bank account. Visa, Maestro, Discover, American Express.</p>
+          </div>
+          <div>
+            <label for="creditCardNumber">Card number</label>
+            <input class="check--credit" type="number" id="creditCardNumber" placeholder="0000 0000 0000 0000">
+          </div>
+          <div>
+            <label for="creditCardName">Name on card</label>
+            <input class="check" type="text" id="creditCardName">
+          </div>
+          <div>
+            <label for="creditCardExpiry">Expiry date</label>
+            <input class="check--date-code" type="number" id="creditCardExpiry" placeholder="MM/YY">
+          </div>
+          <div>
+            <label for="creditCardCVV">CVV Code</label>
+            <input class="check--datedate-code" type="number" id="creditCardCVV" maxlength="3">
+            <button type="button">?</button>
+          </div>
+        </fieldset>
+
+        <div class="paymentSelect--radioPaypal">
+          <input type="radio" name="payment" id="payPal">
+          <label for="payPal" aria-describedby="descPayPal">PayPal</label>
+          <p id="descPayPal">You will be redirected to PayPal website to complete your purchase securely.</p>
+        </div>
 
         <div>
-            <form>
-                <h1>Payment Selection</h1>
-                <div>
-                    <input type="radio" name="pay" id="credit">
-                    <label for="credit">Credit Card</label>
-                    <img src="./images/checkout/cards.png" alt="credit cards" width="106" height="22">
-                    <p>Safe money transfer using your bank account. Visa, Maestro, Discover, American Express.</p>
-                </div>
-                <div>
-                    <label for="cardNumber">Card Number</label>
-                    <input type="cardNumber" id="cardNumber">
-                </div>
-                <div>
-                    <label for="namecard">Name on Card</label>
-                    <input type="text">
-                    <label for="expired">Expiry Date</label>
-                    <input type="date">
-                    <label for="cvvcode">CVV CODE</label>
-                    <input type="number">
-                </div>
-                <div>
-                    <input type="radio" name="pay" id="paypal">
-                    <label for="paypal">Paypal</label>
-                    <img src="./images/checkout/paypal.png" alt="">
-                    <p>You will be redirected to PayPal website to complete your purchase securely.</p>
-
-                </div>
-                <a href="#">⬅️Back to shipping info</a>
-                <button type="submit">Complete Order</button>
-
-
-            </form>
+          <a href="#">Back to Shipping Info</a>
+          <button class="blue__btn" type="submit">Complete order</button>
         </div>
+      </form>
+
     </main>
 
-    <aside>
-        <h1>shopping cart<span aria-label="Número de productos">2</span></h1>
-        <ul>
-            <li>
-                <a href="#">
-                    <img src="./images/checkout/producto-2.jpg" alt=""> Typeface
-                    Lightweight College Backpack
-
-                    <span aria-label="precio">€99,90</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="./images/checkout/producto-1.jpg" alt="">Business Casual Leather Watch Waterproof
-                    <span aria-label="precio">€69,90</span>
-                </a>
-            </li>
-        </ul>
-        <div>
-            <button type="button">have a vaucher?</button>
-            <form action="#">
-                <label for="insertCode"></label>
-                <input type="text" id="code">
-                <button type="submit">submit</button>
-            </form>
-        </div>
-        <table>
-            <caption class="sr-only">Total</caption>
-            <tr>
-                <th scope="row">subtotal
-
-                </th>
-                <td>169</td>
-            </tr>
-            <tr>
-                <th>shipping</th>
-                <td>99</td>
-            </tr>
-            <tr>
-                <th scope="row">total</th>
-                <td>169,90</td>
-            </tr>
-
-
-
-        </table>
-
+    <aside class="shoppingCard">
+      <h1 class="shoppingCard__header">Shopping Cart <span aria-label="Número de productos">2</span></h1>
+      <ul class="shopList">
+        <li>
+          <a href="#">
+            <img src="..." alt="">
+            Lightweight College Backpack
+            <span aria-label="precio">€ 99.90</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="..." alt="">
+            Business Casual Leather Watch Waterproof
+            <span aria-label="precio">€ 69.90</span>
+          </a>
+        </li>
+      </ul>
+      <div class="shopValid">
+        <button class="btn--valid" type="button">Have a Voucher?</button>
+        <form class="voucher" action="">
+          <label for="code">Insert vaucher code</label>
+          <input type="text" id="code">
+          <button class="voucher__btn" type="submit">Submit</button>
+        </form>
+      </div>
+      <table class="total">
+        <caption class="sr-only">Totales del carrito</caption>
+        <tr>
+          <th scope="row">Subtotal</th>
+          <td>€ 169.80</td>
+        </tr>
+        <tr>
+          <th scope="row">Shipping</th>
+          <td>free</td>
+        </tr>
+        <tr class="totalPrice">>
+          <th scope="row">Total</th>
+          <td>€ 169.80</td>
+        </tr>
+      </table>
     </aside>
+  </div>
+
 </body>
 
 </html>
