--- a/shipping.html
+++ b/shipping.html
@@ -2,105 +2,110 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title>Page Title</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
+
+  <div class="container">
     <main>
-        <ol aria-label="breadcrum">
-            <li aria-current="false"> customer info</li>
-            <li aria-current="true"> shopping info</li>
-            <li aria-current="false"> payment selection</li>
-        </ol>
-        <article>
-            <h1>Shipping Information</h1>
-            <address>
-                <p> Jamy Larson <br>
-                    Unit 2 Green Mount Retail Park <br>
-                    Halifax<br>
-                    HX1 5QN<br>
-                    Tel:0344 332 5931<br> </p>
-            </address>
 
-        </article>
-        <div>
-            <a href="#">Edit Address</a>
-            <a href="#">Add New</a>
+      <ol class="menu" aria-label="Rastro de migas">
+        <li class="menu">Customer info</li>
+        <li class="menu--true" aria-current="true">Shipping info</li>
+        <li class="menu">Payment selection</li>
+      </ol>
+
+
+      <article class="shipInformation">
+        <h1>Shipping Information</h1>
+        <div class="container">
+          <article class="shipInformation">
+            <div class="shipInformation__col">
+              <address>
+                Jamy Larson<br>
+                Unit 2 Green Mount Retail Park<br>
+                Halifax<br>
+                HX1 5QN<br>
+                Tel: 0344 332 5931<br>
+              </address>
+              <a href="#">Edit Address</a>
+              <span aria-hidden="true"></span>
+              <a href="#">Add New</a>
+            </div>
+            <div class="shipInformation__col">
+              <img src="..." alt="">
+            </div>
         </div>
-        <img src="./images/checkout/map.png" alt="">
-        <div>
-            <h1>Shipping Method</h1>
+      </article>
+
+      <form class="method" action="">
+        <h1>Shipping Method</h1>
+        <div class="method--radioStandard">
+          <input type="radio" name="shipping" id="standard">
+          <label for="standard" aria-describedby="descStandard">Standard Delivery <span>Free</span></label>
+          <p id="descStandard">Estimated 14-20 Day Shipping (Duties and taxes may be due upon delivery)</p>
         </div>
-        <div>
-            <form>
-                <input type="radio" aria-describedby="standart" name="delivery" id="standart">
-
-                <label for="standart">Standart Delivery Free</label>
-                <p id="desc">Estimated 14-20 Day Shipping (Duties and taxes may be due upon delivery)</p>
-
-                <input type="radio" aria-describedby="fast" name="delivery" id="fast">
-                <label for="fast">Fast Delivery €8.00</label>
-                <p>Estimated 2-5 Days Shipping (Duties and taxes may be due upon delivery)</p>
-                <div><span><a href="#">⬅️back to customer info</a>
-                        <button type="submit">Continue To Payment</button></span>
-                </div>
-
-            </form>
+        <div class="method--radioFast">
+          <input type="radio" name="shipping" id="fast">
+          <label for="fast" aria-describedby="descFast">Fast Delivery <span>€ 8.00</span></label>
+          <p id="descFast">Estimated 2-5 Days Shipping (Duties and taxes may be due upon delivery)</p>
         </div>
+
+        <div>
+          <a href="#">Back to Customer Info</a>
+          <button class="blue__btn" type="submit">Continue to payment</button>
+        </div>
+      </form>
+
     </main>
-    <aside>
-        <h1>shopping cart<span aria-label="Número de productos">2</span></h1>
-        <ul>
-            <li>
-                <a href="#">
-                    <img src="./images/checkout/producto-2.jpg" alt=""> Typeface
-                    Lightweight College Backpack
 
-                    <span aria-label="precio">€99,90</span>
-                </a>
-            </li>
-            <li>
-                <a href="#">
-                    <img src="./images/checkout/producto-1.jpg" alt="">Business Casual Leather Watch Waterproof
-                    <span aria-label="precio">€69,90</span>
-                </a>
-            </li>
-        </ul>
-        <div>
-            <button type="button">have a vaucher?</button>
-            <form action="#">
-                <label for="insertCode"></label>
-                <input type="text" id="code">
-                <button type="submit">submit</button>
-            </form>
-        </div>
-        <table>
-            <caption class="sr-only">Total</caption>
-            <tr>
-                <th scope="row">subtotal
-
-                </th>
-                <td>169</td>
-            </tr>
-            <tr>
-                <th>shipping</th>
-                <td>99</td>
-            </tr>
-            <tr>
-                <th scope="row">total</th>
-                <td>169,90</td>
-            </tr>
-
-
-
-        </table>
-
+    <aside class="shoppingCard">
+      <h1 class="shoppingCard__header">Shopping Cart <span aria-label="Número de productos">2</span></h1>
+      <ul class="shopList">
+        <li>
+          <a href="#">
+            <img src="..." alt="">
+            Lightweight College Backpack
+            <span aria-label="precio">€ 99.90</span>
+          </a>
+        </li>
+        <li>
+          <a href="#">
+            <img src="..." alt="">
+            Business Casual Leather Watch Waterproof
+            <span aria-label="precio">€ 69.90</span>
+          </a>
+        </li>
+      </ul>
+      <div class="shopValid">
+        <button class="btn--valid" class="" type="button">Have a Voucher?</button>
+        <form class="voucher" action="">
+          <label for="code">Insert vaucher code</label>
+          <input type="text" id="code">
+          <button class="voucher__btn" type="submit">Submit</button>
+        </form>
+      </div>
+      <table class="total">
+        <caption class="sr-only">Totales del carrito</caption>
+        <tr>
+          <th scope="row">Subtotal</th>
+          <td>€ 169.80</td>
+        </tr>
+        <tr>
+          <th scope="row">Shipping</th>
+          <td>free</td>
+        </tr>
+        <tr class="totalPrice">
+          <th scope="row">Total</th>
+          <td>€ 169.80</td>
+        </tr>
+      </table>
     </aside>
-
+  </div>
 
 </body>
 
